--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class=" logo-section">
               <div class="logo">
-                <img src="HIM VILLAGE E.png" alt="HimVillageePrahari Logo">
+                <a href="index.html"><img src="HIM VILLAGE E.png" alt="HimVillageePrahari Logo"></a>
                 <p>HimVillageePrahari</p>
                 <p>
               </div>
@@ -28,10 +28,10 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#volunteers">Volunteers</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+                    <li><a href="404.html">About</a></li>
+                    <li><a href="404.html">Gallery</a></li>
+                    <li><a href="404.html">Volunteers</a></li>
+                    <li><a href="404.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -205,8 +205,14 @@
         <div class="mentors">
           <div class="mentor-img"><img loading="lazy" src="mentor1.jpg"></div>
           <div class="mentor-txt">
-            <h6>Mr. Gautam Khattar</h6>
-            <p>Mr. Gautam Khattar is a renowned social media influencer and the Founder of Stantan Mahasang. He inspires and motivates people through his unique storytelling and impactful content. His organization focuses on raising awareness about religious literature and spiritual growth, making him a significant figure in societal and spiritual enlightenment.</p>
+            <h6>Mr Vinay Singh</h6>
+            <p>Vinay Singh boasts over 15 years of experience in IT consulting and education. He earned his Master's degree in the 
+              USA and is currently serving as a Senior Cloud Manager in Chicago, while also holding a Ph.D. in Computers from 
+              UPES, India.
+              
+              Vinay has authored more than 31 research papers globally on cloud computing and was a senior professor at DIT 
+              University. He holds two patents related to cloud migration and has published a book titled "Version Control" in the USA. 
+              Originally from Gwaldum, Uttarakhand, India, Vinay's extensive expertise spans both practical and academic fields.</p>
           </div>
           <div class="mentor-social">
             <a href="#" class="facebook"><i class="fab fa-facebook"></i></a>
@@ -219,36 +225,65 @@
     </div>
   </section>
 
-<section class="section-team">
-  <h2>Our Team</h2>
-  <p>Meet the dedicated individuals behind HimVillageePrahari, who work tirelessly to protect the Himalayas and empower local communities.</p>
-
-  <div class="team-cards">
-    <div class="team-member">
-      <div class="team-img">
-        <img loading="lazy" src="gautam.jpeg" alt="Team Member 1">
+  <section class="section-team">
+    <h2>Our Team</h2>
+    <p>Meet the dedicated individuals behind HimVillageePrahari, who work tirelessly to protect the Himalayas and empower local communities.</p>
+  
+    <div class="team-cards">
+      <div class="team-member">
+        <div class="team-img">
+          <img loading="lazy" src="" alt="Team Member 1">
+        </div>
+        <div class="team-info">
+          <h6>Sumit Singh</h6>
+          <p><strong>Founder & CEO</strong></p>
+          <p>Meet Mr. Sumit Singh from Rudraprayag, Uttarakhand—a passionate advocate for social change and environmental 
+            conservation. His journey includes impactful work with the UN Development Programme, focusing on youth 
+            empowerment and sustainability.
+            
+            As a fellow with Sewa International Bharat (2023-2025), Sumit has led significant projects, including 
+            'Plastic Waste Management' in Madhya Pradesh, aimed at enhancing the livelihoods of rag-pickers 
+            through the innovative 'Waste to Wealth' concept. He also founded “Him Village ePrahari” in Haridwar,
+            a registered non-profit dedicated to sustainable waste management and building zero-waste villages.</p>
+        </div>
       </div>
-      <div class="team-info">
-        <h6>Team Member 1</h6>
-        <p>Role: Founder & CEO</p>
-        <p>Biography or brief description of the team member's role, experience, and contributions.</p>
+  
+      <div class="team-member">
+        <div class="team-img">
+          <img loading="lazy" src="team2.jpg" alt="Team Member 2">
+        </div>
+        <div class="team-info">
+          <h6>Mr. Sushant Singh</h6>
+          <p><strong>Youth Empowerment Lead</strong></p>
+          <p>Mr. Sushant Singh, a dynamic mentor and youth advocate, has dedicated his career to empowering young minds. With over 5,000 youths successfully mentored through STEP-AHEAD INDIA, Sushant's leadership focuses on guiding and inspiring the next generation to achieve personal and professional success. His passion for youth development is a cornerstone of Him Village ePrahari's mission to foster sustainable communities through education and mentorship.</p>
+        </div>
       </div>
+  
+      <div class="team-member">
+        <div class="team-img">
+          <img loading="lazy" src="team3.jpg" alt="Team Member 3">
+        </div>
+        <div class="team-info">
+          <h6>Mr. Vashist Kumar Pandey</h6>
+          <p><strong>Community Engagement Coordinator</strong></p>
+          <p>Vashist Kumar Pandey, a dedicated advocate for social transformation, leverages his academic background in History and Journalism to foster positive change. As Him Village ePrahari's Social Impact & Community Engagement Coordinator, Vashist leads grassroots initiatives that empower local communities, particularly focusing on youth-driven projects that address sustainability and societal growth. His leadership inspires action and encourages active participation in building a better future for the region.</p>
+        </div>
+      </div>
+  
+      <div class="team-member">
+        <div class="team-img">
+          <img loading="lazy" src="team4.jpg" alt="Team Member 4">
+        </div>
+        <div class="team-info">
+          <h6>Mr. A M Sanjeev</h6>
+          <p><strong>Education Coordinator</strong></p>
+          <p>Mr. A M Sanjeev, a visionary in technical education and development, brings extensive expertise in web development, blockchain, AI, and research. He leads educational initiatives at Him Village ePrahari, ensuring knowledge transfer and skill development for local youth. His background in advanced equipment monitoring and MERN stack development positions him as a driving force behind the NGO's digital outreach and sustainability efforts.</p>
+        </div>
+      </div>
+      <!-- Add more team members as needed -->
     </div>
-
-    <div class="team-member">
-      <div class="team-img">
-        <img loading="lazy" src="team2.jpg" alt="Team Member 2">
-      </div>
-      <div class="team-info">
-        <h6>Team Member 2</h6>
-        <p>Role: Project Manager</p>
-        <p>Biography or brief description of the team member's role, experience, and contributions.</p>
-      </div>
-    </div>
-
-    <!-- Add more team members as needed -->
-  </div>
-</section>
+  </section>
+  
 
 
   <section class="section7">
@@ -358,57 +393,29 @@
   <section class="section9">
     <h2>Our Volunteers</h2>
     <p>Our volunteers are the heart and soul of our organization, dedicating their time, skills, and passion to protect the Himalayas and uplift local communities. Meet some of the incredible individuals who are making a difference through their commitment and hard work.</p>
-    <div class="volunteers">
-        <div class="volunteer">
-            <div class="volunteer-img"><img loading="lazy" src="volunteer1.jpg"></div>
-            <div class="volunteer-txt">
-                <h6>Mr. Ravi Kumar</h6>
+    <div class="team-cards">
+        <div class="team-member">
+            <div class="team-img">
+                <img loading="lazy" src="volunteer1.jpg" alt="">
+            </div>
+            <div class="team-info">
+                <h6>Mr. Atul Kumar</h6>
+                <p>Atul Kumar, originally from Bareilly, Uttar Pradesh, and currently living in Haridwar, Uttarakhand, completed his graduation in Psychology in 2021 from Gurukul Kangri University. He later completed his master’s in the same field in 2023 and is now pursuing a diploma in Guidance and Counseling from Jamia Millia Islamia University. His passion for helping others is driven by his interest in understanding human behavior and his strong decision-making and problem-solving skills.</p>
             </div>
         </div>
-        <div class="volunteer">
-            <div class="volunteer-img"><img loading="lazy" src="volunteer2.jpg"></div>
-            <div class="volunteer-txt">
-                <h6>Ms. Priya Singh</h6>
+        <div class="team-member">
+            <div class="team-img">
+                <img loading="lazy" src="volunteer2.jpg" alt="">
+            </div>
+            <div class="team-info">
+                <h6>Ms. Jasveer Singh</h6>
+                <p>Jasveer Singh hails from Himachal Pradesh’s Sirmour district. She holds a post-graduate degree in Clinical Psychology and is currently pursuing a post-graduate diploma in Guidance and Counseling. With a keen interest in counseling, she aims to make a meaningful impact in the field of mental health and guidance counseling.</p>
             </div>
         </div>
-        <div class="volunteer">
-            <div class="volunteer-img"><img loading="lazy" src="volunteer3.jpg"></div>
-            <div class="volunteer-txt">
-                <h6>Mr. Anil Sharma</h6>
-            </div>
-        </div>
-        <div class="volunteer">
-            <div class="volunteer-img"><img loading="lazy" src="volunteer4.jpg"></div>
-            <div class="volunteer-txt">
-                <h6>Ms. Neha Gupta</h6>
-            </div>
-        </div>
-                <div class="volunteer">
-            <div class="volunteer-img"><img loading="lazy" src="volunteer4.jpg"></div>
-            <div class="volunteer-txt">
-                <h6>Ms. Neha Gupta</h6>
-            </div>
-        </div>
-                <div class="volunteer">
-            <div class="volunteer-img"><img loading="lazy" src="gautam.jpeg"></div>
-            <div class="volunteer-txt">
-                <h6>Ms. Neha Gupta</h6>
-            </div>
-        </div>
-                <div class="volunteer">
-            <div class="volunteer-img"><img loading="lazy" src="volunteer4.jpg"></div>
-            <div class="volunteer-txt">
-                <h6>Ms. Neha Gupta</h6>
-            </div>
-        </div>
-                <div class="volunteer">
-            <div class="volunteer-img"><img loading="lazy" src="volunteer4.jpg"></div>
-            <div class="volunteer-txt">
-                <h6>Ms. Neha Gupta</h6>
-            </div>
-        </div>
+        <!-- Add more volunteers as needed -->
     </div>
-  </section>
+</section>
+
 
 <section class="section10">
     <h3>Contact Us</h3>
