--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
           </div>
         </div>
         <div class="mentors">
-          <div class="mentor-img"><img loading="lazy" src="mentor1.jpg"></div>
+          <div class="mentor-img"><img loading="lazy" src="Mentor_Vinay.jpeg"></div>
           <div class="mentor-txt">
             <h6>Mr Vinay Singh</h6>
             <p>Vinay Singh boasts over 15 years of experience in IT consulting and education. He earned his Master's degree in the 
@@ -232,7 +232,7 @@
     <div class="team-cards">
       <div class="team-member">
         <div class="team-img">
-          <img loading="lazy" src="" alt="Team Member 1">
+          <img loading="lazy" src="g4.jpg" alt="Team Member 1">
         </div>
         <div class="team-info">
           <h6>Sumit Singh</h6>
@@ -250,11 +250,11 @@
   
       <div class="team-member">
         <div class="team-img">
-          <img loading="lazy" src="team2.jpg" alt="Team Member 2">
+          <img loading="lazy" src="Sushant.jpeg" alt="Team Member 2">
         </div>
         <div class="team-info">
           <h6>Mr. Sushant Singh</h6>
-          <p><strong>Youth Empowerment Lead</strong></p>
+          <p><strong>Co-Founder</strong></p>
           <p>Mr. Sushant Singh, a dynamic mentor and youth advocate, has dedicated his career to empowering young minds. With over 5,000 youths successfully mentored through STEP-AHEAD INDIA, Sushant's leadership focuses on guiding and inspiring the next generation to achieve personal and professional success. His passion for youth development is a cornerstone of Him Village ePrahari's mission to foster sustainable communities through education and mentorship.</p>
         </div>
       </div>
@@ -272,12 +272,12 @@
   
       <div class="team-member">
         <div class="team-img">
-          <img loading="lazy" src="team4.jpg" alt="Team Member 4">
+          <img loading="lazy" src="Sanjeev.jpg" alt="Team Member 4">
         </div>
         <div class="team-info">
           <h6>Mr. A M Sanjeev</h6>
-          <p><strong>Education Coordinator</strong></p>
-          <p>Mr. A M Sanjeev, a visionary in technical education and development, brings extensive expertise in web development, blockchain, AI, and research. He leads educational initiatives at Him Village ePrahari, ensuring knowledge transfer and skill development for local youth. His background in advanced equipment monitoring and MERN stack development positions him as a driving force behind the NGO's digital outreach and sustainability efforts.</p>
+          <p><strong>Education Coordinator and Technical Head</strong></p>
+          <p>Mr. A M Sanjeev is a passionate advocate for sustainable development and community empowerment. Serving as both the Education Coordinator and Technical Head, he leads educational initiatives while managing the NGO’s website, email communications, and event coordination. Sanjeev’s role is central to fostering skill development, promoting cleanliness, zero waste efforts. His leadership in both technical and community-driven projects ensures the NGO's mission of sustainable growth and environmental awareness is effectively carried out.</p>
         </div>
       </div>
       <!-- Add more team members as needed -->
@@ -295,7 +295,7 @@
         <div class="gallery">
             <div class="gallery-item">
                 <div class="hexagon">
-                    <img loading="lazy" src="gallery/g1.JPG" alt="Image 1">
+                    <img loading="lazy" src="gallery/g1.jpg" alt="Image 1">
                 </div>
             </div>
             <div class="gallery-item">
@@ -396,7 +396,7 @@
     <div class="team-cards">
         <div class="team-member">
             <div class="team-img">
-                <img loading="lazy" src="volunteer1.jpg" alt="">
+                <img loading="lazy" src="Atul.jpeg" alt="">
             </div>
             <div class="team-info">
                 <h6>Mr. Atul Kumar</h6>
@@ -405,7 +405,7 @@
         </div>
         <div class="team-member">
             <div class="team-img">
-                <img loading="lazy" src="volunteer2.jpg" alt="">
+                <img loading="lazy" src="Jasveer.jpeg" alt="">
             </div>
             <div class="team-info">
                 <h6>Ms. Jasveer Singh</h6>
@@ -424,7 +424,7 @@
     <div class="contact-info">
         <div class="address">
             <h3>Our Address</h3>
-            <p>Him Village ePrahari 123 Himalayan Road, Haridwar, Uttarakhand, India <br>Email: contact@himvillageeprahari.org <br> Phone: +91 98765 43210</p>
+            <p>HIM VILLAGE E-prahari FOUNDATION is C/o Kamla Devi, Ramnagar, Ajabpur, Dehradun, Dehradun, Uttarakhand, India, 248121.</p>
         </div>
         <div class="map">
             <h3>Find Us Here</h3>
