Contact Us Page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li><a href="404.html">About</a></li>
                     <li><a href="404.html">Gallery</a></li>
                     <li><a href="404.html">Volunteers</a></li>
-                    <li><a href="404.html">Contact Us</a></li>
+                    <li><a href="./Contact Us/contactUs.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
