--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="card2">
         <div class="card1-img"><img loading="lazy" src="fundraising.jpg"></div>
         <div class="txt-card1">
-          <h6>Fundraising</h6>
+          <h6>foundation</h6>
             <p>Help us preserve the Himalayas—every effort counts!</p>
             <button class="card-btn">Donate Now</button>
         </div>
