--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="404.html">About</a></li>
                     <li><a href="404.html">Gallery</a></li>
-                    <li><a href="404.html">Volunteers</a></li>
+                    <li><a href="volunteer_signup.html">Volunteers</a></li>
                     <li><a href="./Contact Us/contactUs.html">Contact Us</a></li>
                 </ul>
             </nav>
@@ -509,7 +509,7 @@ function scrollTeamLeft() {
     <div>
       <h3>Are You A Volunteer Ready?</h3>
       <p>Join us in our mission to protect the Himalayas and empower local communities. Together, we can make a difference.</p>
-      <button class="volunteer-btn">Join Us</button>
+      <a href="volunteer_signup.html"><button class="volunteer-btn">Join Us</button></a>
     </div>
   </section>
 
