--- a/Contact Us/contactUs.html
+++ b/Contact Us/contactUs.html
@@ -174,7 +174,7 @@
 	 <footer class="footer">
 		<div class="social-media-icons">
 		  <a href="https://www.linkedin.com/company/him-village-eprahari/posts/?feedView=all" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
-		  <a href="https://www.instagram.com/yourprofile" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+		  <a href="https://www.instagram.com/himvillageprahari?igsh=eHF2bmpqMmhtbmE3" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
 		</div>
 		<div class="footer-bottom">
 		  <p>&copy; 2024 Him Village ePrahari. All rights reserved.</p>
