--- a/Contact Us/contactUs.html
+++ b/Contact Us/contactUs.html
@@ -32,7 +32,7 @@
 			<div class="-nav-container">
 				<div class=" logo-section">
 				  <div class="logo">
-					<a href="index.html"><img src="../HIM VILLAGE E.png" alt="HimVillageePrahari Logo"></a>
+					<a href="../index.html"><img src="../HIM VILLAGE E.png" alt="HimVillageePrahari Logo"></a>
 					<p>HimVillageePrahari</p>
 					<p>
 				  </div>
