--- a/about.html
+++ b/about.html
@@ -59,21 +59,21 @@
             <div class="mission-cards">
 
                 <div class="card1" style="width: 18rem;">
-                    <img class="card-img-top" src="/images/mission-1 (1).jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="mission-1 (1).jpeg" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Promote sustainable living and eco-friendly practices in rural areas.</p>
                     </div>
                 </div>
 
                 <div class="card2" style="width: 18rem;">
-                    <img class="card-img-top" src="/images/mission-2.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="mission-2.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Provide education and awareness about environmental conservation.</p>
                     </div>
                 </div>
 
                 <div class="card3" style="width: 18rem;">
-                    <img class="card-img-top" src="/images/mission-3.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="mission-3.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Support rural communities in achieving self-reliance through skill development and
                         innovation.</p>
@@ -81,7 +81,7 @@
                 </div>
 
                 <div class="card4" style="width: 18rem;">
-                    <img class="card-img-top" src="/images/mission-4.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="mission-4.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Advocate for the preservation of local biodiversity and natural resources.</p>
                     </div>
@@ -103,7 +103,7 @@
             organization committed to making a tangible impact."</p>
         </div>
         </div>
-        <img src="images/story.jpeg" alt="">
+        <img src="story.jpeg" alt="">
     </div>
 
 
@@ -111,26 +111,26 @@
             <div class="activities-heading"><h2>Our Activities</h2></div>
             <div class="activities-card">
                 <div class="card1" style="width: 18rem;">
-                    <img class="card-img-top" src="/images/activity1.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="activity1.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Eco-Conservation Projects: Tree plantations, waste management drives, and water conservation campaigns.</p>
                     </div>
                 </div>
                 <div class="card2" style="width: 18rem;">
-                    <img class="card-img-top" src="/images/activity2.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="activity2.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Skill Development Programs: Training locals in sustainable practices and providing vocational education.</p>
                     </div>
                 </div>
                 <div class="card3" style="width: 18rem;">
-                    <img class="card-img-top" src="/images/activity3.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="activity3.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Community Empowerment: Supporting women, children, and marginalized groups
                         through tailored initiatives.</p>
                     </div>
                 </div>
                 <div class="card4" style="width: 18rem;">
-                    <img class="card-img-top" src="/images/activity4.jpeg" alt="Card image cap">
+                    <img class="card-img-top" src="activity4.jpeg" alt="Card image cap">
                     <div class="card-body">
                       <p class="card-text">Awareness Campaigns: Organizing workshops, essay competitions, and educational
                         sessions about environmental issues</p>
@@ -164,7 +164,7 @@
                  </p>
               </div>
             </div>
-         <div class="why-choose-us-image"> <img src="/images/what-set-us-apart.jpeg" height="300px"></div>
+         <div class="why-choose-us-image"> <img src="what-set-us-apart.jpeg" height="300px"></div>
         </div>
 
         <div class="our-impact">
@@ -209,7 +209,7 @@
                   <div class="team-cards">
                     <div class="team-member">
                       <div class="team-img">
-                        <img loading="lazy" src="/images/g4.jpeg" alt="Team Member 1">
+                        <img loading="lazy" src="g4.jpeg" alt="Team Member 1">
                       </div>
                       <div class="team-info">
                         <h6>Mr. Sumit Singh</h6>
@@ -220,7 +220,7 @@
                 
                     <div class="team-member">
                       <div class="team-img">
-                        <img loading="lazy" src="/images/Sushant.jpeg" alt="Team Member 2">
+                        <img loading="lazy" src="Sushant.jpeg" alt="Team Member 2">
                       </div>
                       <div class="team-info">
                         <h6>Mr. Sushant Kumar</h6>
@@ -231,7 +231,7 @@
                 
                     <div class="team-member">
                       <div class="team-img">
-                        <img loading="lazy" src="/images/vasisth.jpeg" alt="Team Member 3">
+                        <img loading="lazy" src="vasisth.jpeg" alt="Team Member 3">
                       </div>
                       <div class="team-info">
                         <h6>Mr. Vashist Kumar Pandey</h6>
