--- a/about.html
+++ b/about.html
@@ -326,8 +326,8 @@
             <div class="contact-us">
                 <h2>Get in Touch</h2>
                 <p>
-                <i class="fa-regular fa-envelope"></i><p>ngo email address</p><br>
-                <i class="fa-solid fa-phone"></i><p>phone number</p><br>
+                <i class="fa-regular fa-envelope"></i><p>admin@himvillageprahari.org</p><br>
+                <i class="fa-solid fa-phone"></i><p>+91 80576 46822</p><br>
                 <i class="fa-solid fa-location-dot"></i><p>HIM VILLAGE E-prahari FOUNDATION is C/o Kamla Devi, Ramnagar, Ajabpur, Dehradun, Dehradun, Uttarakhand, India, 248121.</p><br>
                 <a href="https://www.instagram.com/himvillageprahari?igsh=eHF2bmpqMmhtbmE3"><i class="fa-brands fa-instagram"></i></a>      
                 <a href="https://www.linkedin.com/company/him-village-eprahari/"><i class="fa-brands fa-linkedin"></i><br></a>
