--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <nav>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="404.html">About</a></li>
                     <li><a href="404.html">Gallery</a></li>
                     <li><a href="volunteer_signup.html">Volunteers</a></li>
                     <li><a href="./Contact Us/contactUs.html">Contact Us</a></li>
