--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ function scrollTeamLeft() {
 <footer class="footer">
   <div class="social-media-icons">
     <a href="https://www.linkedin.com/company/him-village-eprahari/posts/?feedView=all" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://www.instagram.com/yourprofile" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/himvillageprahari/" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
   </div>
   <div class="footer-bottom">
     <p>&copy; 2024 Him Village ePrahari. All rights reserved.</p>
