--- a/mission&visionpage/mission-vision.html
+++ b/mission&visionpage/mission-vision.html
@@ -10,7 +10,7 @@
 </head>
 <body>
  
-  <section class="top">
+  <section class="top" id="top">
     <header>
         <div class="container">
             <div class=" logo-section">
