MISSION and core values section styling changed

--- a/mission&visionpage/mission-vision.html
+++ b/mission&visionpage/mission-vision.html
@@ -70,38 +70,41 @@
           </div>
         </div>
         <div class="card">
-          <img src="../3.jpg" alt="Rural Communities" class="card-image" />
+          <img src="../Gallery/g13.jpg" alt="Rural Communities" class="card-image" />
           <div class="overlay">
             <h3>Empower Rural Communities</h3>
             <p>Equip underprivileged villages with resources, education, and tools to lead eco-conscious lives.</p>
           </div>
         </div>
         <div class="card">
-          <img src="../7.jpg" alt="Awareness" class="card-image" />
+          <img src="../Gallery/g3.jpg" alt="Awareness" class="card-image" />
           <div class="overlay">
             <h3>Promote Awareness</h3>
             <p>Educate people about environmental issues and inspire action toward protecting nature.</p>
           </div>
         </div>
         <div class="card">
-          <img src="../7.jpg" alt="Awareness" class="card-image" />
+          <img src="../Gallery/g10.jpg" alt="Awareness" class="card-image" />
           <div class="overlay">
-            <h3>Promote Awareness</h3>
-            <p>Educate people about environmental issues and inspire action toward protecting nature.</p>
+            <h3>Encourage Collaboration</h3>
+            <p>Partner with like-minded individuals, organizations, and
+              institutions to amplify impact.
+              </p>
           </div>
         </div>
         <div class="card">
-          <img src="../7.jpg" alt="Awareness" class="card-image" />
+          <img src="../Gallery/g15.jpg" alt="Awareness" class="card-image" />
           <div class="overlay">
-            <h3>Promote Awareness</h3>
-            <p>Educate people about environmental issues and inspire action toward protecting nature.</p>
+            <h3>Foster Innovation</h3>
+            <p>Develop and implement innovative solutions to tackle environmental
+              challenges at the grassroots level.</p>
           </div>
         </div>
         <div class="card">
-          <img src="../7.jpg" alt="Awareness" class="card-image" />
+          <img src="../Gallery/g17.jpg" alt="Awareness" class="card-image" />
           <div class="overlay">
-            <h3>Promote Awareness</h3>
-            <p>Educate people about environmental issues and inspire action toward protecting nature.</p>
+            <h3>Conserve Natural Resources</h3>
+            <p>Encourage responsible consumption of water, forests, and minerals to sustain ecosystems for future generations.</p>
           </div>
         </div>
         <!-- Add similar cards for remaining items -->
