added responsiveness in mission section

--- a/mission&visionpage/mission-vision.html
+++ b/mission&visionpage/mission-vision.html
@@ -35,8 +35,8 @@
     <section class="main-body">
       <h1>Guardians of the Himalayas</h1>
       <p class="main-body-p">Empowering Communities, Preserving Nature<p>
-      <br><br><br>
-    </section>
+      
+</section>
 
   </section>
 
@@ -48,9 +48,7 @@
             <div class="about-content">
                 <h2>HIM VILLAGE E-prahari FOUNDATION</h2>
                 <p>
-                    NGO is dedicated to making a difference in the lives of underprivileged communities. We focus on
-                    education, health care, and providing resources to those in need. Join us in creating a brighter future
-                    for everyone. Together, we can make a change.
+                  Him Village ePrahari is committed to preserving the precious Himalayan ecosystem, which supports countless lives. Our mission addresses critical issues like waste management, climate change, and environmental damage. We aim to create zero-waste villages and implement sustainable waste management models for the region. By promoting eco-friendly practices, we empower communities to protect their environment. Education plays a key role in our efforts, as we seek to raise awareness and responsibility among the next generation. We believe every individual can contribute to environmental preservation. Through our initiatives, we inspire villages to become guardians of nature. Together, we work towards a sustainable and healthier Himalayan future. Protecting this irreplaceable ecosystem is not just a goal but a shared responsibility. Join us in safeguarding the Himalayas for generations to come.
                 </p>
             </div>
         </div>
@@ -121,7 +119,7 @@
       <h2>VISION</h2>
       <div class="slider-container">
         <div class="slider">
-          <div class="slide">
+          <div class="slide" id="slide1">
             <div class="slide-content">
               <div class="text-overlay">
                 <h3>A Sustainable Future</h3>
@@ -129,7 +127,7 @@
               </div>
             </div>
           </div>
-          <div class="slide">
+          <div class="slide" id="slide2">
             <div class="slide-content">
               <div class="text-overlay">
                 <h3>Eco-Friendly Villages</h3>
@@ -137,7 +135,7 @@
               </div>
             </div>
           </div>
-          <div class="slide">
+          <div class="slide" id="slide3">
             <div class="slide-content">
               <div class="text-overlay">
                 <h3>Global Environmental Advocacy</h3>
@@ -145,7 +143,7 @@
               </div>
             </div>
           </div>
-          <div class="slide">
+          <div class="slide" id="slide4">
             <div class="slide-content">
               <div class="text-overlay">
                 <h3>Empowered Communities</h3>
@@ -153,7 +151,7 @@
               </div>
             </div>
           </div>
-          <div class="slide">
+          <div class="slide" id="slide5">
             <div class="slide-content">
               <div class="text-overlay">
                 <h3>Pollution-Free Ecosystems</h3>
