--- a/mission&visionpage/mission-vision.html
+++ b/mission&visionpage/mission-vision.html
@@ -263,7 +263,7 @@
               <span></span>
              </div>
             </h3 >
-           <img  src="../img/upi_1734695421512.png" alt="">
+           <img  src="#" alt="">
           <!-- <div class="social-icons">
               <i class="fa-brands fa-facebook"></i>
               <i class="fa-brands fa-linkedin"></i>
