--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="404.html">About</a></li>
                     <li><a href="404.html">Gallery</a></li>
-                    <li><a href="volunteer_signup.html">Volunteers</a></li>
-                    <li><a href="./Contact Us/contactUs.html">Contact Us</a></li>
+                    <li><a href="404.html">Volunteers</a></li>
+                    <li><a href="404.html">Contact Us</a></li>
                 </ul>
             </nav>
         </div>
@@ -509,8 +509,7 @@ function scrollTeamLeft() {
     <div>
       <h3>Are You A Volunteer Ready?</h3>
       <p>Join us in our mission to protect the Himalayas and empower local communities. Together, we can make a difference.</p>
-
-      <a href="volunteer_signup.html"><button class="volunteer-btn">Join Us</button></a>
+      <button class="volunteer-btn">Join Us</button>
     </div>
   </section>
 
@@ -605,7 +604,7 @@ function scrollTeamLeft() {
 <footer class="footer">
   <div class="social-media-icons">
     <a href="https://www.linkedin.com/company/him-village-eprahari/posts/?feedView=all" class="social-icon" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://www.instagram.com/himvillageprahari/" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.instagram.com/yourprofile" class="social-icon" target="_blank"><i class="fab fa-instagram"></i></a>
   </div>
   <div class="footer-bottom">
     <p>&copy; 2024 Him Village ePrahari. All rights reserved.</p>
