mission cards  made responsive

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <section class="section5">
     <h2> Our Services</h2>
-    <P>Our services are designed to address the pressing environmental and social challenges facing the Himalayas. From waste management to education, we are committed to creating a sustainable future for the region and its people.</P>
+    <P id="service-pr">Our services are designed to address the pressing environmental and social challenges facing the Himalayas. From waste management to education, we are committed to creating a sustainable future for the region and its people.</P>
 
 
     <section class="unique-section">
