volunteers box  made responsive

--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ function scrollTeamLeft() {
 
   <section class="section7">
 
-    <h2>Our Gallery</h2>
+    <h2 id="gallery-heading">Our Gallery</h2>
     <p>Explore the beauty of the Himalayas and the impact of our initiatives through our gallery of images and videos.</p>
 
     <section class="photo-gallery">
@@ -490,9 +490,9 @@ function scrollTeamLeft() {
                     <img  src="gallery/g15.jpg" alt="Image 4">
                 </div>
             </div>
-            <div class="gallery-item">
+            <div class="gallery-item" id="gallery-img">
                 <div class="hexagon">
-                    <img  src="gallery/g16.jpg" alt="Image 16">
+                    <img src="gallery/g16.jpg" alt="Image 16">
                 </div>
             </div>
         </div>
@@ -502,10 +502,10 @@ function scrollTeamLeft() {
   </section>
 
   <section class="section8">
-    <div>    
+    <div id="volunteer-ready">    
       <img loading="lazy" src="Human Hand Tree for Culture Diversity Concept Stock Vector - Illustration of love, hands_ 119811352.jpg" alt="Image 1">
     </div>
-    <div>
+    <div id="volunteer-text-box">
       <h3>Are You A Volunteer Ready?</h3>
       <p>Join us in our mission to protect the Himalayas and empower local communities. Together, we can make a difference.</p>
       <button class="volunteer-btn">Join Us</button>
