contact page  made responsive

--- a/index.html
+++ b/index.html
@@ -539,8 +539,8 @@ function scrollTeamLeft() {
 
 
 <section class="section9">
-  <h2>Our Volunteers</h2>
-  <p>Our volunteers are the heart and soul of our organization, dedicating their time, skills, and passion to protect the Himalayas and uplift local communities. Meet some of the incredible individuals who are making a difference through their commitment and hard work.</p>
+  <h2 id="our-valun-heading">Our Volunteers</h2>
+  <p id="our-valun-pr">Our volunteers are the heart and soul of our organization, dedicating their time, skills, and passion to protect the Himalayas and uplift local communities. Meet some of the incredible individuals who are making a difference through their commitment and hard work.</p>
   <div class="volunteer-cards">
       <div class="volunteer-member">
           <div class="volunteer-img">
@@ -567,7 +567,7 @@ function scrollTeamLeft() {
 
 <section class="section10">
     <h3>Contact Us</h3>
-    <p>Get in touch with us to learn more about our initiatives, volunteer opportunities, and how you can support our mission.</p>
+    <p id="contact-us-para">Get in touch with us to learn more about our initiatives, volunteer opportunities, and how you can support our mission.</p>
     
     <div class="contact-info">
         <div class="address">
